# lab7

./: CMakeLists.txt  Expression.hpp  Matrix.hpp  README.md  analysis.cpp  analysis.hpp  in.txt  main.cpp  main2.cpp  out.txt  trace.cpp  trace.hpp
mm/: mm1.c  mm2.c  mm3.c  mm4.c  mm5.c  mm6.c  test.c
src/: Expression.hpp  Matrix.hpp  analysis.cpp  analysis.hpp  graph.cpp  graph.hpp  main2.cpp  problem.cpp  problem.hpp  test_analysis.cpp  trace.cpp  trace.hpp
test/: simple_elimination_test.cpp
